--- a/LibraryWeb/LibraryWeb.csproj
+++ b/LibraryWeb/LibraryWeb.csproj
@@ -215,10 +215,11 @@
     <Compile Include="DAL\Repository\Tables\AuthorsRepository.cs" />
     <Compile Include="DAL\Repository\Tables\BooksAuthorsRepository.cs" />
     <Compile Include="DAL\Repository\Tables\BooksRepository.cs" />
-    <Compile Include="DAL\Repository\AbstractRepository.cs" />
+    <Compile Include="DAL\Repository\IRepository.cs" />
     <Compile Include="DAL\Repository\ConnectionEstablisher.cs" />
     <Compile Include="DAL\Repository\Tables\HistoryRepository.cs" />
     <Compile Include="DAL\Repository\Tables\ReadersRepository.cs" />
+    <Compile Include="DAL\Repository\Tables\RoleRepository.cs" />
     <Compile Include="DAL\Service\BookService.cs" />
     <Compile Include="DAL\Service\HistoryService.cs" />
     <Compile Include="DAL\Service\ICommonQueries.cs" />
@@ -237,6 +238,7 @@
     <Compile Include="Models\History\HistoryModel.cs" />
     <Compile Include="Models\Readers\ReaderModel.cs" />
     <Compile Include="Models\Readers\ReaderValidation.cs" />
+    <Compile Include="Models\Role\RoleModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -247,6 +249,7 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="MailConfig.xml" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="ApplicationInsights.config">
