--- a/LibraryWeb/LibraryWeb.csproj
+++ b/LibraryWeb/LibraryWeb.csproj
@@ -226,6 +226,7 @@
     <Compile Include="DAL\Service\HistoryService.cs" />
     <Compile Include="DAL\Service\ICommonQueries.cs" />
     <Compile Include="DAL\Service\ReaderService.cs" />
+    <Compile Include="DAL\Service\RoleService.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -239,7 +240,6 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\History\HistoryModel.cs" />
     <Compile Include="Models\Readers\ReaderModel.cs" />
-    <Compile Include="Models\Readers\ReaderValidation.cs" />
     <Compile Include="Models\Role\RoleModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
