--- a/LibraryWeb/Web.config
+++ b/LibraryWeb/Web.config
@@ -8,6 +8,14 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <system.net>
+    <mailSettings>
+      <smtp from="John.Smith72217@gmail.com">
+        <network host="smtp.gmail.com" port="587" userName="John.Smith72217@gmail.com"
+                 password="SSSVeryComplex_123_Password" enableSsl="true" />
+      </smtp>
+    </mailSettings>
+  </system.net>
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-LibraryWeb-20161208053309.mdf;Initial Catalog=aspnet-LibraryWeb-20161208053309;Integrated Security=True" providerName="System.Data.SqlClient" />-->
     <add name ="LibraryConnection" connectionString="Data Source=TARDIS-CONSOLE\SQLEXPRESS;initial catalog=Library;integrated security=True" providerName="System.Data.SqlClient"/>
