--- a/LibraryWeb/LibraryWeb.csproj
+++ b/LibraryWeb/LibraryWeb.csproj
@@ -310,6 +310,7 @@
     <Content Include="Views\Readers\Details.cshtml" />
     <Content Include="Views\Books\Details.cshtml" />
     <Content Include="Views\Books\History.cshtml" />
+    <Content Include="Views\Books\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
